# Gruppo-25

./: README.md
Primo_Assignment/: CMakeLists.txt  MyPass.cpp  README.md
Primo_Assignment/FileTest/: test1.c  test2.c
